Scrollbar style fix

--- a/style.css
+++ b/style.css
@@ -62,11 +62,11 @@ button a {
 }
 
 ::-webkit-scrollbar {
-    width: 20px;
+    width: 10px;
 }
 
 ::-webkit-scrollbar-track {
-    background-color: none;
+    background-color: transparent;
     background-image: linear-gradient(to left, var(--deep-pool), #00000000);
 }
 
@@ -298,6 +298,7 @@ header .aligned_right {
 .parallax {
     perspective: 1px;
     height: 100vh;
+    width: 100vw;
     overflow-y: auto;
     overflow-x: hidden;
 }
